--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -11,7 +11,7 @@ jobs:
         node-version: [18.x]
     defaults:
       run:
-        working-directory: ./build
+        working-directory: build
     steps:
       - name: Checkout
         uses: actions/checkout@master
