--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -9,9 +9,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-    defaults:
-      run:
-        working-directory: build
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -20,10 +17,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install and Test
-        run: |
-          npm install
-          npm run-script build
-          npm run-script test
+        run: npm install
+      - run: npm run-script build
+      - run: npm run-script test
       - name: Upload Artifacts
         uses: actions/upload-artifact@master
         with:
