--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install and Test
-        run: npm install
-      - run: npm run-script build
-      - run: npm run-script test
+        run: npm install |
+             npm run-script build |
+             npm run-script test
       - name: Upload Artifacts
         uses: actions/upload-artifact@master
         with:
